# injectq

./: .gitignore  404.html  Agent.md  FinalDocs.md  Ideas.md  Oldplan.md  Plan.md  Plans.md  README.md  RELEASE_NOTES_0.4.0.md  comprehensive_example.py  comprehensive_test.py  debug_bind.py  debug_concrete.py  debug_test.py  docks_plan.md  ex.py  example.py  final.md  final_example.py  index.html  left.md  mkdocs.yml  problem  pyproject.toml  sitemap.xml  smoke_test.py  test_fixes.py  test_new_functionality.py  testing.py
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_a4f961c7daa60af69e55e80c7413e38afd61b0de_20251028_105444.json
advanced-features/circular-dependencies/: index.html
advanced-features/diagnostics/: index.html
advanced-features/overview/: index.html
advanced-features/performance-optimization/: index.html
advanced-features/profiling/: index.html
advanced-features/resource-management/: index.html
advanced-features/thread-safety/: index.html
advanced/async-support/: index.html
advanced/circular-dependencies/: index.html
advanced/diagnostics/: index.html
advanced/middleware/: index.html
advanced/overview/: index.html
advanced/performance-optimization/: index.html
advanced/plugins/: index.html
advanced/profiling/: index.html
advanced/resource-management/: index.html
advanced/thread-safety/: index.html
api-reference/: index.html
api-reference/container/: index.html
api-reference/decorators/: index.html
api-reference/diagnostics/: index.html
api-reference/exceptions/: index.html
api-reference/integrations/: index.html
api-reference/module/: index.html
api-reference/providers/: index.html
api-reference/quick-reference/: index.html
api-reference/registry/: index.html
api-reference/resolver/: index.html
api-reference/scopes/: index.html
api-reference/testing/: index.html
api-reference/types/: index.html
api-reference/validation/: index.html
benchmark-guide/: index.html
benchmark-report/: index.html
best-practices/architectural-patterns/: index.html
best-practices/performance/: index.html
best-practices/security/: index.html
best-practices/testing-strategies/: index.html
changelog/: index.html
contributing/: index.html
core-concepts/container-pattern/: index.html
docs/: benchmark-guide.md  benchmark-report.md  changelog.md  index.md  logging.md
examples/: advanced_provider_patterns.py  ex.py  example.py  factory_api_showcase.py  logging_example.py  multi_container.py  provider_example.py  provider_module_example.py  subclass_checking.py
injectq/: __init__.py
logging/: index.html
reports/: BENCHMARK_QUICK_GUIDE.md  BENCHMARK_REPORT.md  BENCHMARK_VISUAL_SUMMARY.md
search/: search_index.json
tests/: smoke_test.py  test_absolute_final.py  test_additional_coverage.py  test_async_factory.py  test_benchmarks.py  test_components.py  test_comprehensive.py  test_comprehensive_threading.py  test_container.py  test_context.py  test_coverage_boost.py  test_enhanced_features.py  test_factory_enhancements.py  test_fastapi_integration.py  test_final_comprehensive.py  test_final_coverage_push.py  test_final_push.py  test_inject.py  test_inject_container.py  test_modules.py  test_singleton_decorators.py  test_testing_utilities.py  test_thread_safety.py  test_union_fix.py  test_utils_helpers.py  test_utils_types.py  test_validation_comprehensive.py
(+122 files in other folders)
